# sntex

./: .gitignore
cpp/: CMakeLists.txt
cpp/common/: proto.hpp
cpp/consumer/: CMakeLists.txt  consumer-tests.cmake
cpp/consumer/include/: client.hpp
cpp/consumer/src/: main.cpp
cpp/producer/: CMakeLists.txt  producer-tests.cmake
cpp/producer/include/: file_storage.hpp  generator.hpp  server.hpp  storage.hpp
cpp/producer/src/: main.cpp
cpp/producer/tests/: test_file_storage.cpp  test_storage.cpp
go/consumer/: consumer.go  main.go
go/producer/: generator.go  main.go  producer.go  server.go  storage.go
go/producer/src/storage/: storage.go
py/: consumer.py  generator.py  producer.py
